feat: implementação completa de User Management com Keycloak + 2FA
Implementação da Fase 1 do Portal Container: sistema completo de gestão
de usuários com integração Keycloak, autenticação OAuth2/OIDC, convites
por email, templates editáveis e preparação para 2FA.

## Novas Features

### 1. Keycloak Admin API Integration
- Keycloak Admin Client com service account
- Lazy singleton pattern para otimização
- Métodos completos de gestão de usuários:
  - createUser(), setPassword(), setTemporaryPassword()
  - sendPasswordResetEmail(), getTwoFactorStatus()
  - assignRole(), getUserByEmail(), updateUser(), deleteUser()
- Scripts de configuração automatizada

### 2. User Invitations System
- Collection UserInvitations com tokens seguros (32-byte random)
- Expiração automática (48 horas)
- Status tracking (pending, accepted, expired, cancelled)
- Auto-geração de tokens via beforeChange hook
- Auto-expiração via beforeRead hook
- Metadata tracking (IP, user-agent)

### 3. Email Templates System
- Collection EmailTemplates editável via Admin UI
- Variáveis dinâmicas com Handlebars
- Templates pré-configurados:
  - user_invitation: Convite de usuário
  - password_reset: Reset de senha
  - 2fa_enabled: Notificação 2FA
  - welcome: Boas-vindas
- Email service com nodemailer
- Seed script para popular templates iniciais

### 4. Roles & Permissions Enhancement
- Users collection com relacionamento many-to-many com Roles
- Campo invitationId para tracking de origem
- Campo twoFactorEnabled sincronizado do Keycloak
- Campo lastLoginAt para audit trail
- Status completo (active, inactive, suspended, pending)

### 5. Collection Order Fix (PayloadCMS Best Practice)
- Reordenação de collections seguindo dependências:
  - Roles → UserInvitations → Users
- Fix do erro InvalidFieldRelationship

## Arquivos Criados

### Collections (3 arquivos)
- src/collections/UserInvitations.ts - Sistema de convites
- src/collections/EmailTemplates.ts - Templates editáveis
- src/collections/Users.ts - At

--- a/backoffice-portal/docker-compose.prod-mode.yml
+++ b/backoffice-portal/docker-compose.prod-mode.yml
@@ -22,12 +22,19 @@ services:
       timeout: 5s
       retries: 5
 
-  # Keycloak - OAuth2/OIDC Provider
+  # Keycloak - OAuth2/OIDC Provider (PRODUCTION MODE)
   keycloak:
     image: quay.io/keycloak/keycloak:23.0
     container_name: portal_keycloak
     restart: unless-stopped
-    command: start-dev
+    command:
+      - start
+      - --hostname=localhost
+      - --hostname-port=8081
+      - --hostname-strict=false
+      - --hostname-strict-https=false
+      - --http-enabled=true
+      - --proxy=edge
     environment:
       # Admin credentials
       KEYCLOAK_ADMIN: admin
@@ -40,23 +47,9 @@ services:
       KC_DB_PASSWORD: portal_dev_pass
       KC_DB_SCHEMA: public
 
-      # Hostname
-      KC_HOSTNAME: localhost
-      KC_HOSTNAME_PORT: 8080
-      KC_HOSTNAME_STRICT: 'false'
-      KC_HOSTNAME_STRICT_HTTPS: 'false'
-
-      # HTTP settings
-      KC_HTTP_ENABLED: 'true'
-      KC_HTTP_PORT: 8080
-
-      # Proxy settings (for reverse proxy)
-      KC_PROXY: edge
-
-      # Fix for "3rd party check iframe" timeout error
-      KC_SPI_LOGIN_PROTOCOL_OPENID_CONNECT_LEGACY_LOGOUT_REDIRECT_URI: 'true'
-      KC_SPI_TRUSTSTORE_FILE_FILE: ''
-      KC_SPI_TRUSTSTORE_FILE_PASSWORD: ''
+      # Production mode requires these
+      KC_HEALTH_ENABLED: 'true'
+      KC_METRICS_ENABLED: 'true'
     ports:
       - '8081:8080'
     networks:
