--- a/backoffice-portal/package.json
+++ b/backoffice-portal/package.json
@@ -19,10 +19,12 @@
     "test:int": "cross-env NODE_OPTIONS=--no-deprecation vitest run --config ./vitest.config.mts"
   },
   "dependencies": {
+    "@keycloak/keycloak-admin-client": "^26.4.4",
     "@payloadcms/db-postgres": "3.63.0",
     "@payloadcms/next": "3.63.0",
     "@payloadcms/richtext-lexical": "3.63.0",
     "@payloadcms/ui": "3.63.0",
+    "@types/nodemailer": "^7.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -33,6 +35,7 @@
     "jwks-rsa": "^3.2.0",
     "lucide-react": "^0.553.0",
     "next": "15.4.7",
+    "nodemailer": "^7.0.10",
     "openid-client": "^6.8.1",
     "payload": "3.63.0",
     "react": "19.1.0",
